--- a/NewTableMates/Web.config
+++ b/NewTableMates/Web.config
@@ -8,6 +8,9 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
+  <connectionStrings>
+    <add name="TableMatesContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=TableMates1;Integrated Security=SSPI;" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -61,6 +64,11 @@
     </compilers>
   </system.codedom>
   <entityFramework>
+    <contexts>
+      <context type="NewTableMates.DAL.TableMatesContext, TableMatesContext">
+        <!--<databaseInitializer type="ContosoUniversity.DAL.SchoolInitializer, ContosoUniversity" />-->
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
